# overfitguard

./: .env.example  .gitignore  BACKEND.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
api/: entitlement.mjs  health.mjs  webhook.mjs
api/_lib/: auth.mjs  backend.test.mjs  lemonsqueezy.mjs  store.mjs
course/: 01-why-your-backtest-is-lying.md  02-the-four-defenses.md  03-the-graveyard.md  04-what-actually-works.md  05-a-research-protocol.md  README.md
course/labs/: README.md  capstone.py  exercises.md  lab1_the_mirage.py  lab2_four_defenses.py  lab3_the_screener.py  make_data.py
course/labs/data/: prices.csv  your_strategy.csv
docs/: METHODS.md
examples/: calibration_stress_test.py  mirage_report.html  mirage_returns.csv  quickstart.py  sample_report.html  sample_returns.csv
src/overfitguard/: __init__.py  cli.py  core.py  report.py  screen.py
tests/: test_cli.py  test_core.py  test_screen.py
web/: AUTH_SETUP.md  auth.js  config.js  index.html  overfitguard.js  overfitguard.js 5
web/_parity/: check_auth.mjs  check_degenerate.js
